# evrima-cheatsheet

./: README.md  index.html  make_pdf.py  pre-commit  pyproject.toml  script.js  styles.css
data/: dinosaurs.yaml  dinosaurs_evrima.yaml  dinosaurs_evrima_old.yaml  dinosaurs_hordetest.yaml
data/servers/: jurassic_echoes.yaml
