[project]
name = "evrima-cheatsheet"
version = "0.1.0"
description = ""
authors = [
    {name = "Voxel-Master",email = "235880270+Voxel-Master@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
